--- a/筆記/辭章繫日.md
+++ b/筆記/辭章繫日.md
@@ -1154,3 +1154,14 @@
 ##### 30日
 
 1. 记《饑荒政治：毛時代中國與蘇聯的比較研究》
+
+##### 31日
+
+1. 记《宋代中国的改革：王安石及其新政》
+1. 补《中国转向内在：两宋之际的文化内向》记
+
+### ***11月***
+
+##### 1日
+
+1. 记《内北国而外中国：蒙元史研究》
