--- a/筆記/辭章繫日.md
+++ b/筆記/辭章繫日.md
@@ -189,7 +189,7 @@
 ##### 23日
 
 1. 補《当代中国政府与政治》記
-1. 記《記忆的性别》
+1. 記《记忆的性别》
 
 ##### 24日
 
@@ -1228,3 +1228,8 @@
 ##### 16日
 
 1. 記《大元史与新清史》
+
+##### 17日
+
+1. 補《大元史与新清史》記
+2. 記《训诂学（郭在贻）》
