--- a/筆記/辭章繫日.md
+++ b/筆記/辭章繫日.md
@@ -1238,4 +1238,10 @@
 
 ##### 18日
 
+1. 補《大元史与新清史》記
 1. 記《法律与革命（第二卷）新教改革对西方法律传统的影响》
+
+##### 19日
+
+1. 訂《罗马史》（蒙森）記
+1. 記《從黃隱事件再論元祐初期政局與黨爭》&《北宋太廟時享爭議中的禮學理念》
