--- a/筆記/辭章繫日.md
+++ b/筆記/辭章繫日.md
@@ -1283,9 +1283,15 @@
 
 ##### 28日
 
-1. 補《蔡京与改革杂谈》
+1. 補《蔡京与改革杂谈》記
 2. 記《秦汉福利政策杂论》
 
 ##### 29日
 
+1. 訂《剑桥中国宋代史 上》記
+1. 訂《宋徽宗：天下一人》記
 1. 記《小镇喧嚣》
+
+##### 30日
+
+1. 記《无规则游戏：阿富汗屡被中断的历史》
